--- a/MonMet/www/css/style.css
+++ b/MonMet/www/css/style.css
@@ -70,6 +70,15 @@ h4 {
   display: none;
 }
 
+.boxHour {
+  color: white;
+  font-size: 1em;
+  font-weight: bold;
+  padding: 5px;
+  background-color: #7f8c8d;
+  text-align: center;
+}
+
 .boxLine {
   color: white;
   font-size: 3em;
